--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./fontaawesome/fontawesome-free-6.0.0-web/fontawesome-free-6.0.0-web/css/all.css">
+    <link rel="stylesheet" href="./public/fontaawesome/fontawesome-free-6.0.0-web/fontawesome-free-6.0.0-web/css/all.css">
 </head>
 <body id="App">
     <div class="heading-app">
@@ -46,6 +46,6 @@
     </div>
     <div class="class"></div>
 
-    <script src="../main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
